--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -2,6 +2,12 @@
     <a href="/">Genres</a>
     <a href="/company_list">companies</a>
     <a href="/director_list">directors</a>
-    <a href="/series_list">series</a>
+    <!-- <a href="/series_list">series</a> -->
     <a href="/founder_list">founders</a>
+    <div class="dropdown">
+        <button class="dropbtn">Add stuff</button>
+        <div class="dropdown-content">
+            <a href="/add_game">add game</a>
+        </div>
+    </div>
 </nav>
