--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,7 @@
     <head>
         <title>videogames boah</title>
         <link rel="stylesheet" href="/static/styles.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="/static/script.js"></script>
     </head>
     <body>
