--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,13 +1,8 @@
 <nav>
-    <a href="/">Genres</a>
-    <a href="/company_list">companies</a>
-    <a href="/director_list">directors</a>
+    <a href="/">Games</a>
+    <a href="/company_list">Companies</a>
+    <a href="/director_list">Directors</a>
     <!-- <a href="/series_list">series</a> -->
-    <a href="/founder_list">founders</a>
-    <div class="dropdown">
-        <button class="dropbtn">Add stuff</button>
-        <div class="dropdown-content">
-            <a href="/add_game">add game</a>
-        </div>
-    </div>
+    <a href="/founder_list">Founders</a>
+    <a href="/add_game">Add game</a>
 </nav>
