--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -68,4 +68,47 @@
 
   <input type="submit" value="Add this game">
 </form>
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    function setupDropdownToggle(buttonId, listId, arrowId) {
+      const button = document.getElementById(buttonId);
+      const list = document.getElementById(listId);
+      const arrow = document.getElementById(arrowId);
+
+      button.addEventListener('click', function() {
+        const isVisible = list.style.display === 'block';
+        list.style.display = isVisible ? 'none' : 'block';
+        arrow.classList.toggle('up', !isVisible);
+        arrow.classList.toggle('down', isVisible);
+      });
+    }
+
+    setupDropdownToggle('toggleDirectors', 'directorsList', 'arrowDirectors');
+    setupDropdownToggle('toggleCompanies', 'companiesList', 'arrowCompanies');
+    setupDropdownToggle('toggleGenres', 'genresList', 'arrowGenres');
+
+    function limitCheckboxSelection(className, limit) {
+      const checkboxes = document.querySelectorAll(className);
+      checkboxes.forEach(checkbox => {
+        checkbox.addEventListener('change', function() {
+          const checkedCheckboxes = document.querySelectorAll(className + ':checked');
+          if (checkedCheckboxes.length > limit) {
+            this.checked = false;
+            alert('You can only select up to ' + limit + ' options.');
+          }
+        });
+      });
+    }
+
+    limitCheckboxSelection('.checkbox-director', 3);
+    limitCheckboxSelection('.checkbox-company', 3);
+    limitCheckboxSelection('.checkbox-genre', 3);
+  });
+</script>
+
+
+
+
 {% endblock %}
