--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -2,7 +2,8 @@
     <a href="/">Games</a>
     <a href="/company_list">Companies</a>
     <a href="/director_list">Directors</a>
-    <!-- <a href="/series_list">series</a> -->
     <a href="/founder_list">Founders</a>
     <a href="/add_game">Add game</a>
+    <a href="/add_directors">Add director</a>
+    <a href="/add_company">Add company</a>
 </nav>
