--- a/app/templates/company.html
+++ b/app/templates/company.html
@@ -1,33 +1,73 @@
 {% extends "layout.html" %}
 {% block content %}
-
-<li>{{company.name}}</li>
+<li>
+    {% if company.picture_1 %}
+    <img src="{{ url_for('static', filename='companies_images/' ~ company.picture_1) }}" alt="Company Picture 1">
+    {% endif %}
+</li>
+<li>Name: {{company.name}}</li>
 <li>Videogame(s):
-    {% for games in company_games[:3] %}
-        <a href="/game/{{games.id}}">{{games.name}}</a>
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
+    {% if company_games %}
+        {% for games in company_games[:3] %}
+            <a href="/game/{{games.id}}">{{games.name}}</a>
+            {% if not loop.last %}  ,{% endif %}
+        {% endfor %}
+        {% if company_games|length < 3 %}
+            <a href="/add_game">Add games</a>
+        {% endif %}
+    {% else %}
+        No games yet, <a href="/add_game">Add games</a>
+    {% endif %}
 </li>
 <li>Director(s):
-    {% for directors in company_directors[:3] %}
-        <a href="/director/{{directors.id}}">{{directors.name}}</a>
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
+    {% if company_directors %}
+        {% for directors in company_directors[:3] %}
+            <a href="/director/{{directors.id}}">{{directors.name}}</a>
+            {% if not loop.last %}  ,{% endif %}
+        {% endfor %}
+        {% if company_directors|length < 3 %}
+            <a href="/add_directors">, Add directors</a>
+        {% endif %}
+    {% else %}
+        No director yet, <a href="/add_directors">, Add director</a>
+    {% endif %}
 </li>
 <li>Founder(s):
-    {% for founders in company_founders[:3] %}
-        <a href="/founder/{{founders.id}}">{{founders.name}}</a>
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
+    {% if company_founders %}
+        {% for founders in company_founders[:3] %}
+            <a href="/founder/{{founders.id}}">{{founders.name}}</a>
+            {% if not loop.last %}  ,{% endif %}
+        {% endfor %}
+        {% if company_founders|length < 3 %}
+            <a href="/add_founder">Add founders</a>
+        {% endif %}
+    {% else %}
+        No founders yet, <a href="/add_founder">Add founders</a>
+    {% endif %}
 </li>
 <li>Series:
-    {% for series in company_series[:3] %}
-        {{series.name}}
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
+    {% if company_series %}
+        {% for series in company_series[:3] %}
+            {{series.name}}
+            {% if not loop.last %}  ,{% endif %}
+        {% endfor %}
+        {% if company_series|length < 3 %}
+            <a href="/add_company">, Add series</a>
+        {% endif %}
+    {% else %}
+        No series yet, <a href="/add_company">Add series</a>
+    {% endif %}
 </li>
 <li>
-    founded in: {{company.time_founded}}
+    Founded in: {{company.time_founded}}
+</li>
+<li>
+    Headquarters in: {{company.headquarters}}
+</li>
+<li>
+    {% if company.picture_2 %}
+    <img src="{{ url_for('static', filename='companies_images/' ~ company.picture_2) }}" alt="Company Picture 2">
+    {% endif %}
 </li>
 <li>{{company.description}}</li>
 
