--- a/app/templates/founder.html
+++ b/app/templates/founder.html
@@ -1,14 +1,30 @@
 {% extends "layout.html" %}
 {% block content %}
-
+<li>
+    {% if founder.picture_1 %}
+    <img src="{{ url_for('static', filename='founders_images/' ~ founder.picture_1) }}" alt="Director Picture 1">
+    {% endif %}
+</li>
 <li>{{founder.name}}</li>
 <li>company(s) founded:
-    {% for company in founder_company[:3] %}
-        <a href="/company/{{company.id}}">{{company.name}}</a>
-        {% if not loop.last %}  ,{% endif %}
-    {% endfor %}
+    {% if founder_company %}
+        {% for company in founder_company[:3] %}
+            <a href="/company/{{company.id}}">{{company.name}}</a>
+            {% if not loop.last %}  ,{% endif %}
+        {% endfor %}
+        {% if founder_company|length < 3 %}
+            <a href="/add_company">, Add company</a>
+        {% endif %}
+    {% else %}
+    No companies yet, <a href="/add_company">Add company</a>
+    {% endif %}
 </li>
 <li>{{founder.date_of_birth}}</li>
+<li>
+    {% if founder.picture_2 %}
+    <img src="{{ url_for('static', filename='founders_images/' ~ founder.picture_2) }}" alt="Director Picture 2">
+    {% endif %}
+</li>
 <li>{{founder.description}}</li>
 
 {% endblock %}
