--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -6,4 +6,5 @@
     <a href="/add_game">Add game</a>
     <a href="/add_directors">Add director</a>
     <a href="/add_company">Add company</a>
+    <a href="/add_founder">Add founder</a>
 </nav>
