--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -17,7 +17,7 @@
             <a href="/add_directors">, add director</a>
         {% endif %}
     {% else %}
-        No directors yet, <a href="/add_game">add director</a>
+        No directors yet, <a href="/add_directors">add director</a>
     {% endif %}
 </li>
 <li> My score: {{game.dev_score}}</li>
