adding register/login system

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -40,7 +40,7 @@
         No companies yet, <a href="/add_company">Add company</a>
     {% endif %}
 </li>
-<li>Series: {{ game.series.name }}</li>
+<li>Series: {{ game.Series.name }}</li>
 <li>{{game.release_date}}</li>
 <li>
     {% if game.picture_6 %}
