--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,4 +1,5 @@
 <nav>
+    <a href="/admin">Admin</a>
     <a href="/">Games</a>
     <a href="/company_list">Companies</a>
     <a href="/director_list">Directors</a>
@@ -7,4 +8,9 @@
     <a href="/add_directors">Add director</a>
     <a href="/add_company">Add company</a>
     <a href="/add_founder">Add founder</a>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}">Logout</a>
+    {% else %}
+        <a href="/login">Login</a>
+    {% endif %}
 </nav>
