--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -24,7 +24,7 @@
 <form method="POST" action="{{ url_for('add_game') }}" enctype="multipart/form-data">
   {{ game_form.csrf_token }}
   <p>Game: {{ game_form.game_name(maxlength=30) }} <span>{{ game_form.game_name.errors }}</span></p>
-  <p>Dev score: {{ game_form.game_dev_score }} <span style="color:red">{{ game_form.game_dev_score.errors }}</span></p>
+  <p>My score: {{ game_form.game_dev_score }} <span style="color:red">{{ game_form.game_dev_score.errors }}</span></p>
   <p>Release date: {{ game_form.game_date }} <span style="color:red">{{ game_form.game_date.errors }}</span></p>
 
 
@@ -45,7 +45,7 @@
   <p>Series:
     <select name="game_series">
       <option>No series</option>
-      {% for series in game_form.game_series.choices|sort(attribute=1) %}
+      {% for series in game_form.game_series.choices|sort(attribute=1) if series[1] != 'No series'%}
         <option value="{{ series[0] }}">{{ series[1] }}</option>
       {% endfor %}
     </select>
