--- a/app/templates/director.html
+++ b/app/templates/director.html
@@ -5,6 +5,13 @@
     <img src="{{ url_for('static', filename='directors_images/' ~ director.picture_1) }}" alt="Director Picture 1">
     {% endif %}
 </li>
+<li>
+    {% if director.Username %}
+        Added by: <a href="/dashboard/{{director.Username.id}}">{{director.Username.name}}</a>
+    {% else %}
+        Added by dev
+    {% endif %}
+</li>
 <li>Name :{{director.name}}</li>
 <li>Games:
     {% if director_game %}
@@ -13,7 +20,7 @@
             {% if not loop.last %}  ,{% endif %}
         {% endfor %}
         {% if director_game|length < 3 %}
-            <a href="/add_game">, add game</a>
+            , <a href="/add_game">add game</a>
             {% endif %}
     {% else %}
         No games yet, <a href="/add_game">add game</a>
@@ -26,7 +33,7 @@
             {% if not loop.last %}  ,{% endif %}
         {% endfor %}
         {% if director_company|length < 3 %}
-            <a href="/add_company">, add company</a>
+            , <a href="/add_company">add company</a>
         {% endif %}
     {% else %}
         No companies yet, <a href="/add_company">add company</a>
