--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -8,8 +8,8 @@
     <a href="/add_directors">Add director</a>
     <a href="/add_company">Add company</a>
     <a href="/add_founder">Add founder</a>
-    {% if current_user.is_authenticated %}
-        <a href='/dashboard/{{current_user.id}}'>{{current_user.name}}</a>
+    {% if session.get('user_id') %}
+        <a href='/dashboard/{{session["user_id"]}}'>{{session["user_name"]}}</a>
     {% else %}
         <a href="/login">Login</a>
     {% endif %}
